--- a/autentica/static/css/master.css
+++ b/autentica/static/css/master.css
@@ -10396,3 +10396,12 @@ body {
   overflow: visible;
   clip: auto;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
