--- a/autentica/static/css/login.css
+++ b/autentica/static/css/login.css
@@ -47,3 +47,22 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
+
+.panel-heading {
+    padding: 5px 15px;
+}
+
+.panel-footer {
+  padding: 1px 15px;
+  color: #A0A0A0;
+}
+
+.profile-img {
+  width: 96px;
+  height: 96px;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
