--- a/autentica/templates/autentica/login.html
+++ b/autentica/templates/autentica/login.html
@@ -9,7 +9,30 @@
 </head>
 <body>
 
-  <div class="container">
+  <style type="text/css">
+
+    .panel-heading {
+      padding: 5px 15px;
+    }
+
+    .panel-footer {
+      padding: 1px 15px;
+      color: #A0A0A0;
+    }
+
+    .profile-img {
+      width: 96px;
+      height: 96px;
+      margin: 0 auto 10px;
+      display: block;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+    }
+
+  </style>
+
+  <div class="container" style="margin-top:200px">
     {% if messages %}
       <div class="alert alert-danger">
         {% for message in messages %}
@@ -18,23 +41,56 @@
       </div>
     {% endif %}
 
-  <form class="form-signin" method="POST" action="/autentica/valida-usuario/">
-    {% csrf_token %}
-    <input type="hidden" id="next" name="next" value="{{next}}"/>
-    <h2 class="form-signin-heading">CMC Autenticação</h2>
-    <label for="usuario" class="sr-only">Usuário</label>
-    <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuário" required autofocus data-toggle="tooltip" data-placement="right" title="Usuário que você usa na rede">
-    <label for="senha" class="sr-only">Senha</label>
-    <input type="password" id="senha" name="senha" class="form-control" placeholder="Senha" required data-toggle="tooltip" data-placement="right" title="Senha que você usa na rede">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-  </form>
-  </div>
-  <footer class="footer">
-    <div class="container">
-      <br/>
-      <p class="text-muted" align="center">Módulo de autenticação integrado desenvolvido pelo Departamento de Informática da CMC.</p>
+
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <strong> CMC Autenticação</strong>
+          </div>
+          <div class="panel-body">
+            <form role="form" method="POST" action="/autentica/valida-usuario/">
+              {% csrf_token %}
+              <input type="hidden" id="next" name="next" value="{{next}}"/>
+              <fieldset>
+                <div class="row">
+                  <div class="center-block">
+                    <img class="profile-img"
+                      src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                    <div class="form-group">
+                      <div class="input-group">
+                        <span class="input-group-addon">
+                          <i class="glyphicon glyphicon-user"></i>
+                        </span> 
+                        <input class="form-control" placeholder="Usuário" id="usuario" name="usuario" type="text" autofocus>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="input-group">
+                        <span class="input-group-addon">
+                          <i class="glyphicon glyphicon-lock"></i>
+                        </span>
+                        <input class="form-control" placeholder="Senha" name="senha" type="password" value="">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Entrar">
+                    </div>
+                  </div>
+                </div>
+              </fieldset>
+            </form>
+          </div>
+          <div class="panel-footer ">
+            Módulo de autenticação integrado desenvolvido pelo Departamento de Informática da CMC.
+          </div>
+                </div>
+      </div>
     </div>
-  </footer>
   
   {% javascript 'master' %}
 
