--- a/autentica/templates/autentica/login.html
+++ b/autentica/templates/autentica/login.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   {% load pipeline %}
+  {% load static %}
   {% stylesheet 'master' %}
   
   <meta charset="utf-8">
@@ -21,8 +22,8 @@
     }
 
     .profile-img {
-      width: 96px;
-      height: 96px;
+      height: 120px;
+      width: 132px;
       margin: 0 auto 10px;
       display: block;
       -moz-border-radius: 50%;
@@ -56,7 +57,7 @@
                 <div class="row">
                   <div class="center-block">
                     <img class="profile-img"
-                      src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+                      src="{% static 'images/brasao_transparente.png' %}" alt="">
                   </div>
                 </div>
                 <div class="row">
