--- a/autentica/templates/autentica/login.html
+++ b/autentica/templates/autentica/login.html
@@ -87,7 +87,7 @@
             </form>
           </div>
           <div class="panel-footer ">
-            Módulo 0.7 de autenticação integrado desenvolvido pelo Departamento de Informática da CMC.
+            Módulo de autenticação integrado desenvolvido pelo Departamento de Informática da CMC v.0.7.
           </div>
                 </div>
       </div>
